--- a/CHEMISTRY.html
+++ b/CHEMISTRY.html
@@ -2,7 +2,7 @@
 <HEAD>
 <TITLE>The Chemistry Tools</TITLE>
 </HEAD>
-<BODY TOPMARGIN="100" LEFTMARGIN="100" BGCOLOR="#000080">
+<BODY TOPMARGIN="100" LEFTMARGIN="100" BGCOLOR="#75d6ff">
 <HR SIZE=12>
 <CENTER><B><FONT Size="10" Color="Yellow">The Chemistry Tools</CENTER></B></FONT>
 <P Align="Justify"><B><FONT Size="6" Face="Berlin Sans FB Demi" Color="White">
